Revision history for Config-Role

{{$NEXT}}
        - Improved documentation
        - Added config_dir attribute

0.0.1     2011-10-17 20:28:36 Europe/Oslo
        - Initial version